 - UML2 models can now contain n-ary associations.
 - Interfaces are now mapped correctly.

- A bug in the Java Model Instance Type was fixed.
 - Java instances can now also be imported, if they implement or extend Java
   Classes or Interfaces defined in the model.

- Some bugs of the OCL-Interpreter were fixed.
 - Constraints are now interpreted for constrained 
   sub-classes as well.

- A bug in the Wizards were fixed.
 - The Model Import Wizard can now be started when the current focus is on a 
   non tree-like view.
 - The Model Instance Import Wizard can now be started when the current focus
   is on a non tree-like view.
 - The OCL Constraint Import Wizard can now be started when the current focus
   is on a non tree-like view.
 - The Java Code Generator can now be started when the current focus is on a 
   non tree-like view.

- The Model Instance Wizard was redesigned.

- The Model Instance Browser was redesigned.
 - ModeObjects are now also displayed for Sub-Types of selected 
   Types in the Model Browser.

- The Interpreter View was redesigned.

- Some problems with icons and menu entries in the binary release were fixed.

Release 1.2 (February 26th 2009)
-------------------------------
- The new tool Ocl2Java (ApsectJ code generation for OCL 
  constraints) was added to the release.
- The royal and loyal example was added to the release.
- Some Bugs of the OCL-Parser were fixed:
  - Enumerations are now parsed correctly
- Some Bugs of the OCL-Interpreter were fixed.
  - Operation names are now interpreted correctly
  - Collection operations should now be interpreted correctly.
  - The Variable defined by a LetExpression is now valid in the 
    scope of the LetExpression only.
- Some Bugs of the Java Standard Library were fixed.
  - Collections from model instances are now adapted correctly.
  - Sets will no longer contain the same model object multiple 
    types.
- Some Bugs for Ecore instances were fixed.
  - Enumerations are now adapted correctly.